add hover effects

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <section id="filtered-articles">
 
             <div class="recent-container bg-light">
-              <h2 class="m-xs p-s underline text-right">Most Recent</h2>
+              <h2 class="m-xs p-s underline text-right side-section-header">Most Recent</h2>
               <div class="recent">
                 <div class="center m-xs p-s shadow recent__preview">
                   <h3 class="preview__header text-center">Trysail Sail ho</h3>
@@ -142,7 +142,7 @@
             </div>
 
             <div class="popular-container mt-med bg-light">
-              <h2 class="m-xs p-s underline text-right">Most popular</h2>
+              <h2 class="m-xs p-s underline text-right side-section-header">Most popular</h2>
               <div class="popular">
                 <div class="center m-xs p-s shadow recent__preview">
                   <h3 class="preview__header text-center">The last book I read</h3>
