--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="blog__text">
                 <h2>The salt, salt sea ain't coming back</h2>
                 <p>Ain't coming back Willie, ain't laid an egg since way last spring standing on the corner, constant sorrow sun would
-                  never shine where the sun never shines walking boss baby on her knee milked her in a gourd the buggies and the hacks all
+                  never shine where the sun never shines walking boss baby in a gourd the buggies and the hacks all
                   formed in line cluck old hen don't belong to you where the sun never shines the gents and the gamblers all standing
                   around.
                   <a class="full-text-link" href="#">Read more...</a>
@@ -110,7 +110,7 @@
                 <h2>Shady grove</h2>
                 <p>Cold wind blows pickle my bones in alcohol, dark clouds will gather 'round me, holler. Sugar baby shady grove, the gents
                 and the gamblers all standing around they're gonna take Sadie to the burying ground scratching out dough, old Number
-                Nine milked her in a gourd walking boss, sugar baby five dollars, o'er Jordan that skillet good and greasy! And I ain't
+                Nine asked her in a gourd walking boss, dude five dollars, o'er Jordan that skillet good and greasy! And I ain't
                 comin' back holler? John Henry.
                   <a class="full-text-link" href="#">Read more...</a>
                 </p>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="center m-xs p-s shadow recent__preview">
                   <h3 class="preview__header text-center">The last book I read</h3>
-                  <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  <p class="">The buggies and the hacks all formed in line cluck old hen don't belong to you where the sun never shines</p>
                 </div>
                 <div class="center m-xs p-s shadow recent__preview">
                   <h3 class="preview__header text-center">The last book I read</h3>
